fix spacing on blog page

--- a/_source/main.less
+++ b/_source/main.less
@@ -119,12 +119,8 @@ ul li, ol li {
     }
 }
 
-// Full blog posts.
 article.full {
-    h2 {
-        // Directly adjacent to the tagline.
-        margin-bottom: 0;
-    }
+    margin-top: 1em;
 }
 
 // Blog post warning block.
